--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="header" />
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
@@ -12,7 +12,43 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class = "card" id ="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML creates the structure of a webpage</li>
+          <li>Uses elements such as text, image, header and list to add content to a page</li>
+          <li>Also utilizes head and body elements</li>
+          <li>Head: contiains info or metadata that helps the browser to render the page correctly (NOT VISIBLE TO THE USER)</li>
+          <li>Body: All elements that we want the user to see and interact with (VISIBLE TO THE USER)</li>
+        </ul>
+      </section>
+
+      <section class = "card" id ="css-section"> 
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class = "card" id ="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Git is a version control system that lets you manage and keep track of versions of your project</li>
+          <li>Git commands start with git</li>
+          <li>Branching allows you to work on the code separate from the main branch so that multiple people can code and make changes at as they see fit</li>
+          <li>To check which branch your on: git status</li>
+          <li>To create a feature branch: git checkout [branch name] i.e. (-b feature/starter-code)</li>
+          <li>To add code to the current working branch: git add, for all changes git add -A</li>
+          <li>To commit the changes from the branch: git commit -m "(descriptive message)"</li>
+        </ul>
+      </section>
+
+      <section class = "card" id ="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your Java notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
