--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -27,7 +27,13 @@
       <section class = "card" id ="css-section"> 
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>Cascading Style Sheets (CSS) is the language used for styling your webpage</li>
+          <li>There are three ways to use CSS to style the webpage:
+            <li>Inline CSS: Are coded in line with your code; Allows your to apply style to one singular element</li>
+            <li>Internal Stlye Sheet: Allows you to apply some design for a particular "set" of code</li>
+            <li>External Style Sheet: Most flexible; Allows you to specify CSS rules on a seperate file to make design changes easier. Must link the file</li>
+          </li>
+          <li>To add styles to some and not all elements a class attribute must be used. This allows you to share a CSS rule to any element by making an attribute the selector</li>
         </ul>
       </section>
 
