add js script to index.html

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class = "card" id ="html-section">
@@ -53,7 +54,10 @@
       <section class = "card" id ="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your Java notes here</li>
+          <li>JavaScript is a critical tool that allows the user to have interactivity with your website</li>
+          <li>To define a variable in JavaScript you have to use var i.e. var = topic</li>
+          <li>An array is good to use when you are storing a group of related data</li>
+          <li>To place a comment inside of your code use /* (Beginning) */ (End)</li>
         </ul>
       </section>
     </main>
@@ -61,5 +65,8 @@
     <footer>
       <p>I can code!</p>
     </footer>
+
+    <script src="./assets/script.js"></script> </script>
+
   </body>
 </html>
