--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -58,6 +58,9 @@
           <li>To define a variable in JavaScript you have to use var i.e. var = topic</li>
           <li>An array is good to use when you are storing a group of related data</li>
           <li>To place a comment inside of your code use /* (Beginning) */ (End)</li>
+          <li>When utilizing a function you must call it in order for it to run</li>
+          <li>Just like with variables the you have to use function before naming one</li>
+          <li>Function example: function listTopic()</li>
         </ul>
       </section>
     </main>
